# localevidence

./: .gitignore  ARCHITECTURE.md  LICENSE  PHILOSOPHY.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: question_bank.yaml
docs/: ACQUISITION.md  BUILD-WITH-CLAUDE-CODE.md  answer-style.md  oe-calibration.md
evals/: clinical-reasoning.json  gate-stress.json  held-out-reasoning.json
examples/: README.md
examples/mnd-pack/: README.md  map.json  papers.jsonl  summaries.jsonl
examples/operating_points/: README.md  rural-gp.json  tertiary-ed.json
localevidence/: __init__.py  __main__.py  acquire.py  capability.py  config.py  discovery.py  embedding.py  eval.py  evidence.py  governance.py  guidelines.py  harness.py  index.py  inference.py  ingest.py  ledger.py  loader.py  pack.py  pipeline.py  queue.py  reasoning_profiles.py  safety.py  safety_rules.json  server.py  triage.py  verify.py
localevidence/webapp/: app.js  index.html  manifest.json  sw.js
tests/: conftest.py  test_capability.py  test_catalog.py  test_config_chunk.py  test_eval.py  test_governance.py  test_guidelines_sources.py  test_harness.py  test_index_ledger.py  test_inference.py  test_ingest.py  test_pack.py  test_providers.py  test_reasoning_profiles.py  test_safety.py  test_server_privacy.py  test_verify.py  test_verify_route.py
